avro_derive/tests/ui/avro_rs_373_tag struct.rs
use apache_avro::AvroSchema;

#[derive(AvroSchema)]
#[serde(tag = "bar")]
struct Foo {
    a: String,
    b: i32,
}

pub fn main() {}
